--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="navlinks">
                 <ul id="menulist">
-                    <li><a href="dashboard.html" class="link active">Dashboard</a></li>
+                    <li><a href="dashboard.html" class="link active">Home</a></li>
                     <li><a href="#">Reports</a></li>
                     <li><a href="#">Monitoring</a></li>
                     <li><a href="#">Contact</a></li>
@@ -89,11 +89,12 @@
             <label>info@csi2132.ca</label> <br>
           </div>
         </div>
+        <div class="legal">
+          <p class="container">Copyright (c) 2022 Copyright Holder All Rights Reserved.</p>
+        </div>
       </footer>
     
-      <div class="legal">
-        <p class="container">Copyright (c) 2022 Copyright Holder All Rights Reserved.</p>
-      </div>
+      
     
     
     
