--- a/templates/try.html
+++ b/templates/try.html
@@ -33,31 +33,31 @@
     <section class="register-form-content">
         <div class="container">
             <h2>Create an Account</h2>
-            <form id="registerForm">
+            <form id="registerForm" method="POST">
                 <label for="role">Role:</label>
-                <select id="role" required>
+                <select id="role" name="role" required>
                     <option value="doctor">Doctor</option>
                     <option value="caregiver">Caregiver</option>
                     <option value="patient_responsible">Patient Responsible</option>
                 </select>
                 
-                <label for="username">Firstname:</label>
-                <input type="text" id="firstname" required>
+                <label for="firstname">Firstname:</label>
+                <input type="text" id="firstname" name="firstname" required>
     
-                <label for="username">Lastname:</label>
-                <input type="text" id="lastname" required>
+                <label for="lastname">Lastname:</label>
+                <input type="text" id="lastname" name="lastname" required>
     
-                <label for="username">Phone Number:</label>
-                <input type="text" id="Phone_number" required>
+                <label for="phone_number">Phone Number:</label>
+                <input type="text" id="phone_number" name="phone_number" required>
     
-                <label for="username">Email:</label>
-                <input type="text" id="email" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
                 
                 <label for="password">Password:</label>
-                <input type="password" id="password" required>
+                <input type="password" id="password" name="password" required>
     
-                <label for="password">Adress:</label>
-                <input type="password" id="adress" required>
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address" required>
                 
                 <button type="submit">Register</button>
             </form>
@@ -72,7 +72,6 @@
             </div>
             <p>Already have an account? <a href="login.html">Login here</a></p>
         </div>
-
     </section>
     <footer>
         <div class="container grid">
