--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,7 @@
                 
                 <button type="submit">Login</button>
             </form>
-            <p>Don't have an account? <a href="register.html">Register here</a></p>
+            <p>Don't have an account? <a href="register">Register here</a></p>
         </div>
     </section>
     
