--- a/templates/register.html
+++ b/templates/register.html
@@ -70,7 +70,7 @@
                     <label><a href="#">Terms & conditions</a></label>
                 </div>
             </div>
-            <p>Already have an account? <a href="login.html">Login here</a></p>
+            <p>Already have an account? <a href="login">Login here</a></p>
         </div>
     </section>
     <footer>
