--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -15,7 +15,7 @@
         </div>
         <div class="navlinks">
           <ul id="menulist">
-              <li><a href="dashboard.html" class="link active">Dashboard</a></li>
+              <li><a href="index.html" class="link active">Home</a></li>
               <li><a href="#">Reports</a></li>
               <li><a href="#">Monitoring</a></li>
               <li><a href="#">Contact</a></li>
